--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.29.0",
     "eslint-config-acme": "workspace:0.0.0",
+    "postcss": "^8.4.27",
     "prettier": "^2.8.0",
+    "tailwindcss": "^3.3.3",
     "turbo": "latest"
   },
   "packageManager": "pnpm@8.6.10"
