tailwind working globally for monorepo

--- a/packages/acme-core/tsconfig.json
+++ b/packages/acme-core/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@acme/tsconfig/react-library.json",
-  "include": ["."],
+  "include": [".", "tailwind.config.js", "../configs"],
   "exclude": ["dist", "build", "node_modules"]
 }
