--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
+    "@storybook/addon-styling": "^1.3.6",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.29.0",
     "eslint-config-acme": "workspace:0.0.0",
@@ -20,5 +21,10 @@
     "tailwindcss": "^3.3.3",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@8.6.10"
+  "packageManager": "pnpm@8.6.10",
+  "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^1.14.0"
+  }
 }
