added universal imports in monorepo

--- a/packages/acme-core/tsconfig.json
+++ b/packages/acme-core/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "@acme/tsconfig/react-library.json",
-  "include": [".", "tailwind.config.js", "../configs"],
-  "exclude": ["dist", "build", "node_modules"]
+  "include": [".", "tailwind.config.js", "../configs" ],
+  "exclude": ["dist", "build", "node_modules"],
+  
 }
