--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
-    "@storybook/addon-styling": "^1.3.6",
+    "@storybook/types": "^7.2.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.29.0",
     "eslint-config-acme": "workspace:0.0.0",
     "postcss": "^8.4.27",
     "prettier": "^2.8.0",
+    "storybook-tailwind-dark-mode": "^1.0.22",
     "tailwindcss": "^3.3.3",
     "turbo": "latest"
   },
