--- a/packages/acme-core/package.json
+++ b/packages/acme-core/package.json
@@ -27,5 +27,10 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4"
   }
 }
