--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalDependencies": ["@ui/*"],
   "pipeline": {
     "build": {
       "outputs": ["dist/**", "storybook-static/**"],
